--- a/glc_cs/glc_cs.csproj
+++ b/glc_cs/glc_cs.csproj
@@ -245,6 +245,13 @@
     <Compile Include="DLsite.Designer.cs">
       <DependentUpon>DLsite.cs</DependentUpon>
     </Compile>
+    <Compile Include="AuthData.cs" />
+    <Compile Include="Fanza.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Fanza.Designer.cs">
+      <DependentUpon>Fanza.cs</DependentUpon>
+    </Compile>
     <Compile Include="vndb.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -301,6 +308,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MainLauncher.ja-JP.resx">
       <DependentUpon>MainLauncher.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="MainLauncher.resx">
       <DependentUpon>MainLauncher.cs</DependentUpon>
@@ -332,6 +340,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Fanza.resx">
+      <DependentUpon>Fanza.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="vndb.resx">
       <DependentUpon>vndb.cs</DependentUpon>
     </EmbeddedResource>
